.. This file should contain the changes for the last release only, which
   will be included on the package's page on pypi. All older entries are
   kept in HISTORY.txt

Changelog
=========

3.3.3 - Unreleased
------------------

- Added scroll to anchor tag in toc.js because Firefox was not bringing a user 
  to any anchor tags when a link was directly given to one.
  This closes http://dev.plone.org/plone/ticket/9364
  [vangheem]

- Fixed untranslatable info message "The username you entered could not be found"
  and other messages in RegistrationTool.py
  This closes http://dev.plone.org/plone/ticket/9744
  [vincentfretin]

- Configlets title can now use a different domain than plone.
  This closes http://dev.plone.org/plone/ticket/9738
  [vincentfretin]

- Fixed "Manage portlets" not translated when there is no portlet visible.
  This closes http://dev.plone.org/plone/ticket/8454
  [vincentfretin]

- Better validation and error messages for group create/edit form.
  Fixes http://dev.plone.org/plone/ticket/9667
  [lzdych]

- plone.css will now output stylesheets with link rendering
  Fixes http://dev.plone.org/plone/ticket/9366

  sitemap template now displays objects without a value for Title
  applied patch from crchemist
  Fixes http://dev.plone.org/plone/ticket/9775
  [aaronv]

- Removed option "Send a mail with the password" from the join form,
  as we never send an email with the password.
  Refs http://dev.plone.org/plone/ticket/9670
  [maurits,vincentpretre,jladage]

- Buttons on discussion form are now hidden from print view.
  Fixes http://dev.plone.org/plone/ticket/8460
  [lzdych]
  
- Added missing migration step to update permissions on "legacy" 
  workflows for new roles. Thanks to Vitaliy Podoba for the patch.
  This fixes http://dev.plone.org/plone/ticket/8905
  [amleczko]


3.3.2 - November 3, 2009
------------------------

- Shift "Item type" options under the advanced search page to the right
  when viewed for RTL scripts. This fixes